--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ ipython
 #pandas==1.3.4
 #pydantic==1.10.7
 #shap==0.41.0
-#scikit-learn==1.1.1
+scikit-learn==1.1.1
 #streamlit==1.21.0
 #streamlit-shap==1.0.2
 plotly
