--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 gunicorn
+uvicorn
+# consiglio su SO: https://stackoverflow.com/questions/59391560/how-to-run-uvicorn-in-heroku
+# Gunicorn with Uvicorn workers
+
 fastapi
 matplotlib
 ipython
-#uvicorn
+
 #pandas==1.3.4
 #pydantic==1.10.7
 #shap==0.41.0
