--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,20 @@ gunicorn
 uvicorn
 # consiglio su SO: https://stackoverflow.com/questions/59391560/how-to-run-uvicorn-in-heroku
 # Gunicorn with Uvicorn workers
-
+# wheel==0.38.4
 fastapi
 matplotlib
 ipython
 
-#pandas==1.3.4
-#pydantic==1.10.7
-#shap==0.41.0
-scikit-learn==1.1.1
-streamlit==1.21.0
-#streamlit-shap==1.0.2
+pandas==1.3.4
+numpy==1.23.1
+
+
+streamlit==1.22
+s3fs # https://s3fs.readthedocs.io/en/latest/index.html
 plotly
+
+streamlit-shap==1.0.2
+shap==0.41.0
+scikit-learn==1.1.1
+seaborn
